Normally attacking a card now's working. Working on using special ability